# rust-smpp-sim

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  implementation_plan.md  release.bat  task.md  walkthrough.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/smpp/: codec.rs  lifecycle.rs  mo_service.rs  mod.rs  queue.rs  queue_tests.rs  server.rs  server_tests.rs  session.rs  session_tests.rs
src/web/: logs.rs  mod.rs  utils.rs
static/: style.css
templates/: dashboard.html
templates/partials/: messages.html  sessions.html  stats.html
tests/: integration_test.rs
