[package]
name = "rust-smpp-sim"
version = "0.1.2"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
bytes = "1.10"
actix-rt = "2.11.0"
actix-web = "4.12.1"
askama = "0.15.1"
async-stream = "0.3"
chrono = "0.4.43"
config = "0.15.19"
csv = "1.4.0"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
parking_lot = "0.12"
rand = "0.9.2"
regex = "1.12.2"
rusmpp = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
